# 2DEngine

./: .gitignore  CMakeLists.txt  README.md  br.sh  run.sh
include/: components.hpp  engine.hpp  registry.hpp  sparse.hpp
include/input/: actions.hpp  bindings.hpp  state.hpp
include/systems/: render.hpp  update_controller.hpp  update_input.hpp  update_movement.hpp
src/: main.cpp  registry.cpp
src/systems/: render.cpp  update_controller.cpp  update_input.cpp  update_movement.cpp
